force-app/main/default/objects/KimbleOne__TaxCode__c/KimbleOne__TaxCode__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Tax Code</label>
    <nameField>
        <label>Tax Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>