force-app/main/default/objects/KimbleOne__TaxCode__c/fields/KimbleOne__InvoiceTaxCodeName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceTaxCodeName__c</fullName>
    <label>Appears as on Invoice</label>
    <length>30</length>
    <type>Text</type>
</CustomField>