force-app/main/default/objects/KimbleOne__TaxCode__c/fields/KimbleOne__IsAbstract__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsAbstract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Abstract?</label>
    <type>Checkbox</type>
</CustomField>