force-app/main/default/objects/KimbleOne__TaxCode__c/fields/KimbleOne__OutputTaxCalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OutputTaxCalculationMethod__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Output Tax Calculation Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TaxCalculationMethod</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Tax Codes (Output Tax Calculation Method)</relationshipLabel>
    <relationshipName>TaxCodesOutput</relationshipName>
    <type>Lookup</type>
</CustomField>