force-app/main/default/objects/KimbleOne__TaxCode__c/fields/KimbleOne__ShowOnInvoice__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowOnInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Invoice</label>
    <type>Checkbox</type>
</CustomField>