force-app/main/default/objects/KimbleOne__TaxCode__c/fields/KimbleOne__SupplierInvoiceTaxStatement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoiceTaxStatement__c</fullName>
    <label>Supplier Invoice Tax Statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>