force-app/main/default/objects/KimbleOne__TaxCode__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__IsAbstract__c</columns>
    <columns>KimbleOne__InputTaxCalculationMethod__c</columns>
    <columns>KimbleOne__OutputTaxCalculationMethod__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>